changed main notebook

--- a/reproduce_injections.ipynb
+++ b/reproduce_injections.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bb4ddac",
+   "id": "6887f335",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8515e547",
+   "id": "2f421466",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3645ace",
+   "id": "c794b642",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cd757b0",
+   "id": "cb265018",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ba8a5b8",
+   "id": "d2cd146f",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef6eb32f",
+   "id": "edbf3fb6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56c95dea",
+   "id": "8fc8fbfb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef6eea0f",
+   "id": "2a398bd5",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8579db94",
+   "id": "ea2edd3a",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -165,10 +165,16 @@
     "    if args is None:\n",
     "        exit()\n",
     "\n",
-    "    # TPU settings\n",
+    "    # TPU settings - Updated for TensorFlow 2.19.0 compatibility\n",
     "    tpu_name = os.getenv('TPU_NAME')\n",
     "    resolver = LocalTPUClusterResolver()\n",
-    "    tf.tpu.experimental.initialize_tpu_system(resolver)\n",
+    "    \n",
+    "    # Use the new TPU initialization API for TF 2.19.0+\n",
+    "    try:\n",
+    "        tf.tpu.initialize_tpu_system(resolver)\n",
+    "    except AttributeError:\n",
+    "        # Fallback for older TF versions\n",
+    "        tf.tpu.experimental.initialize_tpu_system(resolver)\n",
     "\n",
     "    strategy = tf.distribute.TPUStrategy(resolver)\n",
     "    per_replica_batch_size = config.BATCH_SIZE // strategy.num_replicas_in_sync\n",
@@ -181,8 +187,9 @@
     "    # get the dataset\n",
     "    train_dataset, valid_dataset, train_count, valid_count = generate_datasets(rp.seed)\n",
     "\n",
-    "    train_dataset = strategy.experimental_distribute_dataset(train_dataset)\n",
-    "    valid_dataset = strategy.experimental_distribute_dataset(valid_dataset)\n",
+    "    # Updated for TensorFlow 2.19.0 compatibility - use newer distribute_dataset API\n",
+    "    train_dataset = strategy.distribute_datasets_from_function(lambda _: train_dataset) if hasattr(strategy, 'distribute_datasets_from_function') else strategy.experimental_distribute_dataset(train_dataset)\n",
+    "    valid_dataset = strategy.distribute_datasets_from_function(lambda _: valid_dataset) if hasattr(strategy, 'distribute_datasets_from_function') else strategy.experimental_distribute_dataset(valid_dataset)\n",
     "\n",
     "    with strategy.scope():\n",
     "        model, back_model = get_model(rp.model, rp.seed)\n",
@@ -222,7 +229,7 @@
     "\n",
     "            tvars = model.trainable_variables\n",
     "            gradients = tape.gradient(avg_loss, tvars)\n",
-    "            model.optimizer.apply_gradients(grads_and_vars=list(zip(gradients, tvars)))\n",
+    "            model.optimizer.apply_gradients(list(zip(gradients, tvars)))\n",
     "\n",
     "            train_loss.update_state(avg_loss * strategy.num_replicas_in_sync)\n",
     "            train_accuracy.update_state(labels, predictions)\n",
@@ -403,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6993e3c1",
+   "id": "532b33b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,15 +424,6 @@
    "cell_metadata_filter": "-all",
    "main_language": "python",
    "notebook_metadata_filter": "-all"
-  },
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "name": "python",
-   "version": "3.12.11"
   }
  },
  "nbformat": 4,
