--- a/reproduce_injections.ipynb
+++ b/reproduce_injections.ipynb
@@ -424,6 +424,9 @@
    "cell_metadata_filter": "-all",
    "main_language": "python",
    "notebook_metadata_filter": "-all"
+  },
+  "language_info": {
+   "name": "python"
   }
  },
  "nbformat": 4,
